# fraud-detection-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  pom.xml  pyproject.toml  rules.jsonl
init-db/: 01_schema.sql
ml/: download_dataset.sh  model_server.py  requirements_ml.txt  train_model.py
ml/tests/: test_model_server.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: fraud_pipeline.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
scratch/: fraud_analysis_executed.ipynb
scripts/: create_topics.sh  csv_replayer.py
src/main/java/com/fraud/: FraudDetectionJob.java
src/main/java/com/fraud/config/: PipelineConfig.java
src/main/java/com/fraud/function/: FraudDetectionBroadcastFunction.java  MLInferenceFunction.java
src/main/java/com/fraud/model/: FraudAlert.java  FraudRule.java  Transaction.java
src/main/java/com/fraud/pattern/: MidRangeVelocityPattern.java  MultipleFailedPattern.java  RapidSmallTransactionPattern.java
src/main/java/com/fraud/serialization/: FraudAlertSerializer.java  FraudRuleDeserializer.java  TransactionDeserializer.java
src/main/java/com/fraud/sink/: AlertJdbcSink.java  TransactionJdbcSink.java
src/test/java/com/fraud/function/: FraudDetectionBroadcastFunctionTest.java
src/test/java/com/fraud/pattern/: MultipleFailedPatternTest.java  RapidSmallTransactionPatternTest.java
