[project]
name = "fraud-detection-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "pandas>=3.0.3",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pytest>=9.0.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
